--- a/package.json
+++ b/package.json
@@ -10,17 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blocknote/core": "^0.14.1",
+    "@blocknote/mantine": "^0.14.1",
+    "@blocknote/react": "^0.14.1",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.6.8",
     "markdown-to-jsx": "^7.4.7",
+    "parse-url": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
-    "react-quill": "^2.0.0",
-    "react-router-dom": "^5.3.4",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.0",
+    "react-toast": "^1.0.3",
+    "react-toastify": "^10.0.5",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
