--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^6.24.0",
     "react-toast": "^1.0.3",
     "react-toastify": "^10.0.5",
-    "uniqid": "^5.4.0"
+    "uniqid": "^5.4.0",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
